--- a/.github/workflows/prod_job.yml
+++ b/.github/workflows/prod_job.yml
@@ -20,9 +20,6 @@ jobs:
       - name: install requirements
         run: pip install -q -r requirements.txt
 
-      - name: install datafold-sdk
-        run: pip install -q datafold-sdk
-
       - name: dbt deps
         run: dbt deps
 
@@ -33,13 +30,4 @@ jobs:
           SNOWFLAKE_USER: ${{ secrets.SNOWFLAKE_USER }}
           SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
           SNOWFLAKE_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
-          SNOWFLAKE_SCHEMA: "${{ 'CORE' }}"
-
-      - name: submit artifacts to datafold
-        run: |
-          set -ex
-          datafold dbt upload --ci-config-id 146 --run-type ${DATAFOLD_RUN_TYPE} --commit-sha ${GIT_SHA}
-        env:
-          DATAFOLD_APIKEY: ${{ secrets.DATAFOLD_APIKEY }}
-          DATAFOLD_RUN_TYPE: "${{ github.ref == 'refs/heads/master' && 'production' || 'pull_request' }}"
-          GIT_SHA: "${{ github.ref == 'refs/heads/master' && github.sha || github.event.pull_request.head.sha }}"
+          SNOWFLAKE_SCHEMA: "${{ 'PROD_NO_CODE_CI_DBT' }}"
